--- a/geotools-sync-client/pom.xml
+++ b/geotools-sync-client/pom.xml
@@ -28,12 +28,13 @@
 	
 	<parent>
 		<groupId>org.geoserver.community</groupId>
-		<artifactId>geoserver-sync</artifactId>
-		<version>2.5-RC2</version>
+		<artifactId>geotools-sync-client-root</artifactId>
+		<version>2.5-RC2-P2</version>
 	</parent>
 
 	<artifactId>geotools-sync-client</artifactId>
 	<name>geotools-sync-client</name>
+	<version>2.5-RC2-P2</version>
 
 	<dependencies>
 		<dependency>
