Ignore git-commit-id-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -275,6 +275,15 @@
 					</execution>
 				</executions>
 			</plugin>
+            <plugin>
+                <groupId>pl.project13.maven</groupId>
+                <artifactId>git-commit-id-plugin</artifactId>
+                <version>2.1.12</version>
+                <executions/>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 	
